# golekin-be

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml
connectors/agen/: __init__.py  agen_routes.py
connectors/auth/: user_auth.py
connectors/cart/: __init__.py  cart_routes.py
connectors/product/: __init__.py  product_routes.py
connectors/promotion/: __init__.py  promotion_routes.py
connectors/transaction/: __init__.py  user_transaction.py
connectors/upload_file/: __init__.py  upload_route.py
connectors/user/: __init__.py  user_routes.py
models/: agens.py  products.py  transactions.py  users.py
models/transactions/: __init__.py  delivery.py  transaction.py  transaction_items.py
