[tool.poetry]
name = "golekin-be"
version = "0.1.0"
description = ""
authors = ["farroshayray <farros.hr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.1"
werkzeug = "^3.1.3"
flask-jwt-extended = "^4.7.1"
email-validator = "^2.2.0"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
